<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bilik</string>
    <string name="room_name">Room Title</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other_rooms_button">Other Rooms…</string>
    <string name="busy_status">In Use</string>
    <string name="empty_status">Available</string>
    <string name="waiting_status">Not confirmed</string>
    <string name="no_more_reservations">No more meetings!</string>
    <string name="unplugged_device">Unplugged</string>
    <string name="until_busy">Room will be available for</string>
    <string name="until_release">Meeting will end in</string>
    <string name="until_auto_release">Meeting must be confirmed in</string>
    <string name="relase_button_text">Release</string>
    <string name="add_more_time_button_text">Add %s minutes</string>
    <string name="no_more_time_button_text">No more time</string>
    <string name="take_room_now_button_text">Take now</string>
    <string name="confirm_room_button_text">Confirm!</string>
    <string name="minutes"> minutes</string>
    <string name="minute"> minute</string>
    <string name="fewSeconds">Few seconds</string>
    <string name="hour"> hour </string>
    <string name="hours"> hours </string>
    <string name="hour_prefix"> Hs</string>
    <string name="book_now">Book now</string>
    <string name="time_until_end_of_confirmation">Room will be free for use in</string>
    <string name="default_resource_prompt">Select a room</string>
    <string name="email_support_hint">Please, provide a support email address</string>
    <string name="alternative_name_hint">Please, provide an alternative name for this room</string>
    <string name="setup_title">Setup</string>
    <string name="setup_description">Use this form to define the calendar that this tablet will manage. You can always return to this screen from the \"Feedback\" screen. Or you can obtain access to this just by restarting the application.</string>
    <string name="please_select_a_room">Please select a room</string>
	<string name="please_select_an_area">Please select an area</string>
    <string name="please_select_an_account">Please select an account</string>
    <string name="room_resources_label">This room has:</string>
    <string name="background_image_label">Background image:</string>
    <string name="select_image">Select new image</string>
	<string name="create_new_area">&#xf067;</string>
    <string name="features_hint">Provide a description of the elements available in the room</string>
    <string name="automatic_dismiss">Dismissing in 10 seconds</string>
    <string name="error_unable_to_contact_server">Unable to contact the server. Please check your internet connection.</string>
    <string name="error_unable_to_get_image">Unfortunately, we are unable to retrieve the selected image. Please select a different one.</string>
    <string name="email_support">Support contact:</string>
    <string name="account">Account:</string>
    <string name="select_account">Account:</string>
	<string name="select_area">Area:</string>
    <string name="select_room">Room:</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="report_title">Feedback</string>
    <string name="report_description">Use this panel to report a problem with this room or give us some feedback.</string>
    <string name="report_setup">You may alter this device\'s settings by going back to the Setup panel here.</string>
    <string name="action_setup">Edit Setup</string>
    <string name="action_Back">Cancel</string>
    <string name="error_incomplete_configuration">Please, complete the configuration.</string>
    <string name="master_device_label">Make this device the main controller of this room:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meeting_rooms_status">MeetingRoomsStatusActivity</string>
    <string name="title_activity_general">GeneralActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="icon_home">&#xf015;</string>
    <string name="icon_list">&#xf009;</string>
    <string name="icon_map">&#xf041;</string>
    <string name="icon_feedback">&#xf130;</string>
    <string name="icon_mic">&#xf130;</string>
    <string name="icon_stop">&#xf04d;</string>
    <string name="comming_soon">Coming soon!</string>
    <string name="back_icon">&#xf105;</string>
    <string name="adhoc_meeting_from_another_room">Adhoc meeting booked from %s</string>
	<string name="quote_exceeded_message">Quote has been exceeded!</string>
</resources>
