<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vsc.google.api.services.samples.calendar.android.bilik.FeedbackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/paddingTop"
        android:padding="20dp"
        android:id="@+id/setup_form"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/setup_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_title"
                    android:paddingRight="30dp"
                    style="@style/setup_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_description"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    style="@style/setup_description"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/report_setup"
                    android:paddingRight="30dp"
                    android:paddingBottom="10dp"
                    style="@style/setup_description"/>

                <Button
                    android:id="@+id/setup_button"
                    style="@style/ResourceButton"
                    android:layout_gravity="left"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_setup"
                    android:background="@drawable/resource_button_selector"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <GridView
                    android:id="@+id/feedback_grid"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:numColumns="auto_fit"
                    android:verticalSpacing="10dp"
                    android:horizontalSpacing="10dp"
                    android:stretchMode="columnWidth">

                </GridView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
