<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.vsc.google.api.services.samples.calendar.android.bilik.SetupActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/setup_form"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/setup_background_color">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="top"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_title"
                    android:paddingRight="30dp"
                    style="@style/setup_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_description"
                    android:paddingRight="30dp"
                    style="@style/setup_description"/>

            </LinearLayout>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="@string/select_account"
                            android:textColor="@color/white"
                            android:textSize="22dp"/>

                        <Spinner android:id="@+id/account_selector"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:spinnerMode="dropdown"
                                 style="@style/SpinnerBilik"/>
                    </LinearLayout>

	                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="@string/email_support"
                            android:textColor="@color/white"/>

                        <EditText
                            android:id="@+id/support_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:hint="@string/email_support_hint"
                            style="@style/EditTextBilik"
                            android:background="@android:color/transparent"
                            />
                    </LinearLayout>

	                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="@string/select_room"
                            android:textSize="22sp"
                            android:textColor="@color/white"/>

                        <Spinner android:id="@+id/resource_selector"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:spinnerMode="dropdown"
                                 style="@style/SpinnerBilik"/>
                    </LinearLayout>

	                <LinearLayout
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:orientation="horizontal">

		                <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="wrap_content"
			                android:textAppearance="?android:attr/textAppearanceMedium"
			                android:paddingTop="15dp"
			                android:paddingLeft="12px"
			                android:text="@string/select_area"
			                android:textColor="@color/white"
			                android:textSize="22sp"/>
		                <LinearLayout
			                android:layout_width="match_parent"
			                android:layout_height="wrap_content"
			                android:gravity="right"
			                android:orientation="horizontal">
			                <Spinner android:id="@+id/area_selector"
			                         android:layout_width="match_parent"
			                         android:layout_height="wrap_content"
			                         android:layout_weight="2"
			                         android:spinnerMode="dropdown"
			                         style="@style/SpinnerBilik"/>
			                <Button
				                android:id="@+id/create_new_area"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:paddingBottom="5dp"
				                android:layout_weight="1"
				                style="@style/ImageButtonBilik"
				                android:textColor="@color/white"
				                android:background="@drawable/resource_button_selector"/>
		                </LinearLayout>
	                </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="Display name:"
                            android:textColor="@color/white"/>

                        <EditText
                            android:id="@+id/alternative_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:paddingLeft="12px"
                            android:paddingTop="15dp"
                            android:hint="@string/alternative_name_hint"
                            style="@style/EditTextBilik"
                            android:background="@android:color/transparent"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="Room features:"
                            android:gravity="top"
                            android:textColor="@color/white"/>

                        <EditText
                            android:id="@+id/features"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:paddingLeft="12px"
                            android:paddingTop="15dp"
                            android:gravity="top"
                            android:hint="@string/features_hint"
                            style="@style/EditTextBilik"
                            android:background="@android:color/transparent"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="@string/background_image_label"
                            android:textColor="@color/white"/>

                        <Button
                            android:id="@+id/background_image_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="11dp"
                            android:text="@string/select_image"
                            style="@style/ImageButtonBilik"
                            android:textColor="@color/white"
                            android:background="@drawable/resource_button_selector"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/is_master_switch_row"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:paddingTop="15dp"
                            android:paddingLeft="12px"
                            android:text="@string/master_device_label"
                            android:textColor="@color/white"/>

                        <CheckBox
                            android:id="@+id/is_master_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginBottom="11dp"/>

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:layout_weight="0">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ProgressBarBilik"
                android:indeterminate="true"
                android:visibility="gone"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:paddingTop="5dp"
                    android:paddingRight="10dp"
                    android:gravity="right"
                    android:text="@string/automatic_dismiss"
                    android:textColor="@color/white"
                    android:id="@+id/automatic_dismiss"/>

                <Button
                    android:id="@+id/done_button"
                    style="@style/DoneButton"
                    android:layout_gravity="right"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_done"
                    android:background="@drawable/done_button_selector"
                    android:textStyle="bold"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>



